fix button align in discover section

--- a/css/section/subscriber.css
+++ b/css/section/subscriber.css
@@ -1,6 +1,9 @@
 #subscriber {
     background: var(--parple);
 }
+#subscriber h2 {
+    text-align: center;
+}
 .form-subs {
     padding: 22px;
     text-align: center;
