--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,6 @@ h1 {
 h2 {
     font-size: 18px;
     font-weight: 300;
-    text-align: center;
 }
 
 p {
